# tinyros

./: .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  commitlint.config.mjs  main.py  network_config.yaml  pyproject.toml  requirements.txt
.agent/rules/: rules.md
.agent/workflows/: api-validation.md  bugfix.md  docs.md  feature.md  orientation.md  refactor.md
.claude/: CLAUDE.md
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: audit.yaml  benchmarks.yaml  code-style.yaml  codeql.yaml  commit-lint.yaml  release.yaml  test.yaml  tests.yaml
benchmark_ros2/: ROS2.md  __init__.py  publisher_node.py  runner.py  runner_multiprocess.py  subscriber_node.py
docs/: index.md
docs/agents/: implementer.md  reviewer.md
docs/guides/: agent-development.md  benchmarks.md  contributing.md  release.md  troubleshooting.md
docs/guides/architecture/: overview.md  tiny-objects.md  transport-error-contract.md  transport-tunables.md  transport.md
docs/standards/: api-design.md  change-scope.md  code-clarity.md  code-organization.md  code-quality.md  environment-tooling.md  exploration-validation.md  linting-formatting.md  testing.md  typing-docstrings.md  version-control.md
docs/workflows/: api-validation.md  bugfix.md  docs.md  feature.md  orientation.md  refactor.md
src/tinyros/: __init__.py  _logging.py  node.py  transport.py
src/tinyros/transport/: __init__.py  _client.py  _common.py  _errors.py  _framing.py  _server.py
tests/: README.md  __init__.py  conftest.py  test_buffer.py  test_client_server.py  test_jax_cupy_conversion.py  test_main_smoke.py  test_network_config.py  test_node.py  test_round_trip.py  test_serialization_cupy.py  test_serialization_jax.py  test_sharray_cupy.py  test_sharray_jax.py  test_speed.py  test_transport_chaos.py  test_transport_errors.py  test_transport_framing.py  test_transport_rpc.py  test_writer_reader.py
tests/benchmark/: test_publish_fn_speed.py
tests/benchmark/portal/: conftest.py  test_speed_portal.py
tests/benchmark/ros2/: ROS2.md  requirements.txt  test_publisher_node.py  test_runner_multiprocess.py  test_runner_singleprocess.py  test_subscriber_node.py
tests/benchmark/tinyros/: conftest.py  test_speed_interprocess.py  test_speed_tinyros.py
tinyros/: __init__.py  buffer.py  utils.py
tinyros/core/: __init__.py  architect.py  client.py  node.py  server.py
tinyros/datatype/: __init__.py  base.py  definition.py  jax.py
tinyros/datatype/sharray/: __init__.py  base.py  cupy.py  jax.py
tinyros/memory/: __init__.py  buffer.py
