[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyros"
version = "0.2.2"
description = "A minimal operating system for robotics."
readme = "README.md"
license = { text = "MIT" }
urls = { Homepage = "https://github.com/antonioterpin/tinyros" }
authors = [
    { name = "Antonio Terpin", email = "aterpin@ethz.ch" },
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
requires-python = ">=3.10"

# Core dependencies
dependencies = [
    "PyYAML>=6.0.0",
    "numpy>=1.24.0",
    "robo-goggles[wandb,jax]",
]

[tool.uv.sources]
robo-goggles = { git = "https://github.com/antonioterpin/goggles.git", branch = "dev" }

# Optional dependencies
[project.optional-dependencies]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pre_commit==4.0.1",
    "basedpyright>=1.37.1",
]
# Legacy portal backend (deprecated; see docs/guides/architecture/transport.md)
portal = [
    "portal>=0.1.0",
]
benchmark = [
    "jax[cuda12]>=0.6.2",  # keep only the GPU override
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=src",
        "--cov-branch",
        "--cov-report=term-missing",
        "--cov-report=html",
        "--cov-report=xml",
]
testpaths = ["tests"]
# Exclude third-party comparison benchmarks that need their own runtimes
# (rclpy, ROS 2) or an active portal installation; they are only relevant
# when explicitly benchmarking against those stacks.
norecursedirs = [
    "tests/benchmark/ros2",
]
filterwarnings = [
        "error",
        "ignore::UserWarning",
        "ignore::DeprecationWarning",
]
markers = [
  "run_explicitly: marks tests that must be run explicitly (e.g. benchmarks)",
]

# Ruff is the single source of truth for linting and formatting rules.
[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "W505",   # doc-line-too-long (paired with max-doc-length)
    "F",      # pyflakes (including unused imports F401)
    "UP",     # pyupgrade (modern typing patterns)
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "D"]  # Allow magic values and relaxed docstrings in tests
"main.py" = ["D"]             # example script
"tests/benchmark/ros2/*" = ["ALL"]  # external ROS2 comparison code

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 80
max-doc-length = 80

# Basedpyright configuration
[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist", "tests/benchmark/ros2"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
]
