[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tinyros"
version = "0.4.1"
description = "A minimal operating system for robotics."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Antonio Terpin", email = "antonio.terpin@gmail.com" },
]
keywords = ["robotics", "ros", "pubsub", "rpc", "ipc"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
  "Typing :: Typed",
]
requires-python = ">=3.10"

# Core dependencies
# Intentionally minimal so `pip install tinyros` resolves cleanly from
# PyPI. Structured logging via `goggles` is opt-in through the
# `[logging]` extra below -- tinyros falls back to the stdlib `logging`
# module when goggles is not installed.
dependencies = [
    "PyYAML>=6.0.0",
    "numpy>=1.24.0",
]

[project.urls]
Homepage = "https://github.com/antonioterpin/tinyros"
Source = "https://github.com/antonioterpin/tinyros"
Issues = "https://github.com/antonioterpin/tinyros/issues"
Changelog = "https://github.com/antonioterpin/tinyros/releases"

[tool.uv.sources]
# uv-only hint: dev environments pick up the dev branch of goggles.
# Stripped from the published wheel's metadata -- end users installing
# from PyPI never see this line.
robo-goggles = { git = "https://github.com/antonioterpin/goggles.git", branch = "dev" }

# Public optional dependencies (advertised on PyPI as `tinyros[<name>]`).
# Contributor-only deps live in `[dependency-groups]` below so they don't
# leak into the published wheel's metadata.
[project.optional-dependencies]
# Opt-in structured logging via goggles. Core tinyros works without it.
logging = [
    "robo-goggles",
]

# Ship the py.typed marker so type-checkers consume the package's types.
[tool.setuptools.package-data]
tinyros = ["py.typed"]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
        "-ra",
        "--strict-markers",
        "--strict-config",
        "--cov=src",
        "--cov-branch",
        "--cov-report=term-missing",
        "--cov-report=html",
        "--cov-report=xml",
        "--cov-fail-under=80",
]
testpaths = ["tests"]
# Exclude third-party comparison benchmarks that need their own runtimes
# (rclpy, ROS 2) or an active portal installation; they are only relevant
# when explicitly benchmarking against those stacks.
norecursedirs = [
    "tests/benchmark/ros2",
]
filterwarnings = [
        "error",
        "ignore::UserWarning",
        "ignore::DeprecationWarning",
]
markers = [
  "run_explicitly: marks tests that must be run explicitly (e.g. benchmarks)",
]

# Ruff is the single source of truth for linting and formatting rules.
[tool.ruff]
line-length = 80
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "W505",   # doc-line-too-long (paired with max-doc-length)
    "F",      # pyflakes (including unused imports F401)
    "UP",     # pyupgrade (modern typing patterns)
    "I",      # isort
    "N",      # pep8-naming
    "D",      # pydocstyle
    "PL",     # pylint
    "RUF",    # ruff-specific rules
]

ignore = [
    "D100",    # Missing docstring in public module
    "D104",    # Missing docstring in public package
    "D105",    # Missing docstring in magic method
    "PLR0913", # Too many arguments to function call
    "PLR2004", # Magic value used in comparison
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["PLR2004", "D"]  # Allow magic values and relaxed docstrings in tests
"main.py" = ["D"]             # example script
"tests/benchmark/ros2/*" = ["ALL"]  # external ROS2 comparison code

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pycodestyle]
max-line-length = 80
max-doc-length = 80

# Basedpyright configuration
[tool.basedpyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", ".venv", "build", "dist", "tests/benchmark/ros2"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false

# Contributor-only dependency groups (PEP 735). Not advertised on PyPI.
# Install with `uv sync --group <name>`.
[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "pre_commit==4.0.1",
    "basedpyright>=1.37.1",
    "robo-goggles[wandb,jax]",
    "build>=1.3.0",
    "twine>=6.2.0",
]
# Comparison benchmarks under tests/benchmark/portal/ and the JAX-driven
# load generators under tests/benchmark/{portal,tinyros}/.
benchmark = [
    "jax[cuda12]>=0.6.2",
    "portal>=0.1.0",
]

# Bandit static security scan. Pickle deserialization (B301, B403) is
# part of the documented transport design under a trusted-peer model,
# so silencing it is intentional; everything else stays on.
[tool.bandit]
targets = ["src"]
skips = ["B301", "B403"]
